@@ -1,3 +1,5 @@
+  - Fix STDIN input to exit on EOF.
+
 0.110
   - Fix v-string to work with perl 5.8. RT#80034
   - Fix issues stopping multiple FileTail inputs being used in the
